--- a/gear2024/style.css
+++ b/gear2024/style.css
@@ -206,8 +206,16 @@ body{
 }
 
 #videoBox{
+    z-index: 99;
+    position: absolute;
+}
+
+#opening{
     z-index: 100;
     position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
 }
 
 @media screen and (max-width: 1024px){
